--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Prime Clean Services</title>
 </head>
 <body>
-    
+    <section>
+        <div class="navbar">
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Orçamento</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
 </body>
 </html>
