Criação do Showcase (Section inicial)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Prime Clean Services</title>
 </head>
 <body>
+
+    <!-- Navbar -->
+
     <section>
         <div class="navbar">
             <div class="logo">
@@ -25,5 +28,17 @@
             </nav>
         </div>
     </section>
+
+    <!-- Showcase -->
+
+    <main>
+        <section class="showcase_container">
+            <div class="text_showcase">
+                <h1>Saúde e conforto <br><span>para sua família</span></h1>
+                <p>Somos uma empresa certificada no ramo de <br>higienização e impermeabilização de estofados.</p>
+                <a href="#" class="btn_showcase">Orçamento</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
