Criação da section services

--- a/index.html
+++ b/index.html
@@ -29,16 +29,191 @@
         </div>
     </section>
 
-    <!-- Showcase -->
-
     <main>
+
+        <!-- Showcase -->
+
         <section class="showcase_container">
             <div class="text_showcase">
                 <h1>Saúde e conforto <br><span>para sua família</span></h1>
                 <p>Somos uma empresa certificada no ramo de <br>higienização e impermeabilização de estofados.</p>
-                <a href="#" class="btn_showcase">Orçamento</a>
+                <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+            </div>
+        </section>
+
+        <section class="boxer_container">
+            <div class="squad1">
+                <img src="assets/img/icon 01.png" alt="">
+                <h1>Qualidade</h1>
+            </div>
+
+            <div class="squad1">
+                <img src="assets/img/icon 02.png" alt="">
+                <h1>Higiene</h1>
+            </div>
+
+            <div class="squad1">
+                <img src="assets/img/icon 03.png" alt="">
+                <h1>Atendimento pontual</h1>
+            </div>
+
+        </section>
+
+        <!-- Services -->
+
+        <section class="services_container">
+            <div class="title_services">
+                <h1>Serviços</h1>
+            </div>
+
+            <div class="services_body">
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service1.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Impermeabilização</h1>
+                        <p>A Impermeabilização consiste em uma Proteção Antimanchas, é a melhor solução para quem busca praticidade na sua rotina em casa.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service2.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de sofás</h1>
+                        <p>Conforto e sensação de estofado novo dentro da sua casa! Eliminamos até o que você não vê. <br><span>.</span></p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service3.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de colchões</h1>
+                        <p>Seu local de descanso, limpo e cheiroso para lhe garantir uma ótima noite de sono! <br> <span>.</span></p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service4.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de tapetes</h1>
+                        <p>Através de nossos métodos de limpeza é possível eliminar e revitalizar seu tapete, deixando com um aspecto de novo e livre de sujeiras.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service5.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de cadeiras</h1>
+                        <p>Faça do seu acento no ambiente de trabalho um lugar mais confortável e propenso para realizar as tarefas do dia a dia.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service6.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Bancos de carro</h1>
+                        <p>A higienização profunda nos bancos, evita que seu veículo seja alvo de fungos e bactérias que comprometem toda a estética.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service7.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de vidros</h1>
+                        <p>Manchas e sujeiras acumuladas prejudicam a estética e o conforto do seu ambiente. <br><span>.</span></p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service8.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de toldos</h1>
+                        <p>A higienização também faz parte da manutenção de toldo. Essa tarefa é vital para que a estrutura não sofra com problemas no futuro.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service9.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de fachadas</h1>
+                        <p>Valorize sua construção. Passe mais confiança através de um ambiente limpo. Uma área externa apresentável indica um lugar mais agradável.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service10.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de pisos</h1>
+                        <p>O tratamento de pisos é ideal para garantir que a vida útil do material aumente, além de colaborar para uma maior saúde e bem-estar.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service11.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza de placa solar</h1>
+                        <p>Não deixe que a sujeira reduza a eficiência energética do painel. Garanta o melhor desempenho da sua placa solar.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+                <div class="services_box">
+                    <div class="services_photo">
+                        <img src="assets/img/service12.png" alt="">
+                    </div>
+
+                    <div class="services_text">
+                        <h1>Limpeza pós-obra</h1>
+                        <p>Deixamos o ambiente pronto para ser utilizado.  Eliminamos poeiras, resíduos da obra, e ainda fazemos uma higienização eficaz do local.</p>
+                    </div>
+                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
             </div>
         </section>
     </main>
+    <script src="https://kit.fontawesome.com/e55d507746.js" crossorigin="anonymous"></script>
 </body>
 </html>
