README.md adicionado

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             </div>
         </section>
 
+        <!-- Boxer -->
+
         <section class="boxer_container">
             <div class="squad1">
                 <img src="assets/img/icon 01.png" alt="">
