Criação da section Sobre

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h1>Impermeabilização</h1>
                         <p>A Impermeabilização consiste em uma Proteção Antimanchas, é a melhor solução para quem busca praticidade na sua rotina em casa.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -90,7 +90,7 @@
                         <h1>Limpeza de sofás</h1>
                         <p>Conforto e sensação de estofado novo dentro da sua casa! Eliminamos até o que você não vê. <br><span>.</span></p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -102,7 +102,7 @@
                         <h1>Limpeza de colchões</h1>
                         <p>Seu local de descanso, limpo e cheiroso para lhe garantir uma ótima noite de sono! <br> <span>.</span></p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -114,7 +114,7 @@
                         <h1>Limpeza de tapetes</h1>
                         <p>Através de nossos métodos de limpeza é possível eliminar e revitalizar seu tapete, deixando com um aspecto de novo e livre de sujeiras.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -126,7 +126,7 @@
                         <h1>Limpeza de cadeiras</h1>
                         <p>Faça do seu acento no ambiente de trabalho um lugar mais confortável e propenso para realizar as tarefas do dia a dia.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -138,7 +138,7 @@
                         <h1>Bancos de carro</h1>
                         <p>A higienização profunda nos bancos, evita que seu veículo seja alvo de fungos e bactérias que comprometem toda a estética.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -150,7 +150,7 @@
                         <h1>Limpeza de vidros</h1>
                         <p>Manchas e sujeiras acumuladas prejudicam a estética e o conforto do seu ambiente. <br><span>.</span></p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -162,7 +162,7 @@
                         <h1>Limpeza de toldos</h1>
                         <p>A higienização também faz parte da manutenção de toldo. Essa tarefa é vital para que a estrutura não sofra com problemas no futuro.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -174,7 +174,7 @@
                         <h1>Limpeza de fachadas</h1>
                         <p>Valorize sua construção. Passe mais confiança através de um ambiente limpo. Uma área externa apresentável indica um lugar mais agradável.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -186,7 +186,7 @@
                         <h1>Limpeza de pisos</h1>
                         <p>O tratamento de pisos é ideal para garantir que a vida útil do material aumente, além de colaborar para uma maior saúde e bem-estar.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -198,7 +198,7 @@
                         <h1>Limpeza de placa solar</h1>
                         <p>Não deixe que a sujeira reduza a eficiência energética do painel. Garanta o melhor desempenho da sua placa solar.</p>
                     </div>
-                    <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
                 <div class="services_box">
@@ -210,9 +210,63 @@
                         <h1>Limpeza pós-obra</h1>
                         <p>Deixamos o ambiente pronto para ser utilizado.  Eliminamos poeiras, resíduos da obra, e ainda fazemos uma higienização eficaz do local.</p>
                     </div>
+                    <a href="#" class="btn_services"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="video">
+            <div class="video_container">
+                <div class="video_title">
+                    <h1>Como deixamos o seu<br></h1>
+                    <h1>ambiente um lugar único:</h1>
+                </div>
+
+                <div class="video_itens">
+                    <div class="video_item"></div>
+                    <div class="video_item"></div>
+                    <div class="video_item"></div>
+                    <div class="video_item"></div>
+                    <div class="video_item"></div>
+                    <div class="video_item"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="about_container">
+                <div class="about_text">
+                    <h1>Sobre</h1>
+                    <p>A Prime Clean Service é uma empresa especializada no segmento de limpeza e higienização de estofados, tapetes, carpetes, bancos automotivos, colchões, poltronas e oxi-sanitização de ambientes residenciais e corporativos. Atuamos com profissionais altamente qualificados, que têm como foco a excelência e o atendimento no serviço prestado ao cliente. Utilizamos produtos exclusivos que garantem um excelente resultado nos serviços prestados. Além da higienização, garantimos ainda a total remoção de fungos, ácaros e bactérias, responsáveis por alergias respiratórias</p>
                     <a href="#" class="btn"><i class="fa-brands fa-whatsapp"></i>Orçamento</a>
                 </div>
 
+                <div class="about_photo">
+                    <img src="assets/img/about_photo.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="quest">
+            <div class="quest_container">
+                <div class="quest_item">
+                    <img src="assets/img/icon 04.png" alt="">
+                    <h1>Missão</h1>
+                    <p>Executar serviços de limpeza com excelência, trabalhando com eficiência e ética para atender as necessidades dos seus clientes.</p>
+                </div>
+
+                <div class="quest_item">
+                    <img src="assets/img/icon 04.png" alt="">
+                    <h1>Visão</h1>
+                    <p>Tornar-se a empresa referência em serviços de limpeza.</p>
+                </div>
+
+                <div class="quest_item">
+                    <img src="assets/img/icon 04.png" alt="">
+                    <h1>Valores</h1>
+                    <p>Respeito ao cliente, Prestatividade, pontualidade e otimização do tempo.</p>
+                </div>
             </div>
         </section>
     </main>
