Criação da section resultados

--- a/index.html
+++ b/index.html
@@ -269,6 +269,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="results">
+            <div class="results_container">
+                <div class="results_text">
+                    <h1>Resultados</h1>
+                </div>
+
+                <div class="results_photo">
+                    <img src="assets/img/instagram_photo.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://kit.fontawesome.com/e55d507746.js" crossorigin="anonymous"></script>
 </body>
