Criação da Section Dúvidas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!-- Navbar -->
+    <!-- Barra de Navegação -->
 
     <section>
         <div class="navbar">
@@ -31,7 +31,7 @@
 
     <main>
 
-        <!-- Showcase -->
+        <!-- Pagina Inicial -->
 
         <section class="showcase_container">
             <div class="text_showcase">
@@ -61,7 +61,7 @@
 
         </section>
 
-        <!-- Services -->
+        <!-- Serviços -->
 
         <section class="services_container">
             <div class="title_services">
@@ -216,6 +216,8 @@
             </div>
         </section>
 
+        <!-- Vídeos -->
+
         <section class="video">
             <div class="video_container">
                 <div class="video_title">
@@ -234,6 +236,8 @@
             </div>
         </section>
 
+        <!-- Sobre -->
+
         <section class="about">
             <div class="about_container">
                 <div class="about_text">
@@ -247,6 +251,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Missão, Valores -->
 
         <section class="quest">
             <div class="quest_container">
@@ -270,6 +276,8 @@
             </div>
         </section>
 
+        <!-- Resultados -->
+
         <section class="results">
             <div class="results_container">
                 <div class="results_text">
@@ -281,7 +289,63 @@
                 </div>
             </div>
         </section>
+
+        <!-- Ambient -->
+
+        <section class="ambient">
+            <div class="ambient_container">
+                <div class="text_ambient">
+                    <h1><span class="txt1">Mais conforto e</span><br> <span class="txt2">qualidade de ter</span><br> <span class="txt2">um ambiente</span><br> <span class="txt1">limpo e saudável</span><br><span class="txt2">com nossa equipe</span><br> <span class="txt2">profissional.</span></h1>
+                </div>
+
+                <div class="photo_ambient">
+                    <div class="photo_up">
+                        <img src="assets/img/Ambient01.png" alt="">
+                        <img src="assets/img/Ambient02.png" alt="">
+                    </div>
+
+                    <div class="photo_down">
+                        <img src="assets/img/ambient03.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Dúvidas -->
+
+        <section class="questions">
+            <div class="questions_container">
+                <div class="questions_title">
+                    <h1>Dúvidas Frequentes</h1>
+                </div>
+
+                <div class="questions_infor">
+                    <div class="questions_text">
+                        <p class="question_text"><i class="fa-solid fa-caret-right"></i>A limpeza remove manchas?</p>
+                    </div>
+
+                    <div class="questions_text">
+                        <p class="question_text"><i class="fa-solid fa-caret-right"></i>Como é realizado o procedimento de higienização de estofados?</p>
+                    </div>
+
+                    <div class="questions_text">
+                        <p class="question_text"><i class="fa-solid fa-caret-right"></i>Os produtos usados são seguros para animais e crianças?</p>
+                    </div>
+
+                    <div class="questions_text">
+                        <p class="question_text"><i class="fa-solid fa-caret-right"></i>O serviço é feito na minha casa? quanto tempo leva para secar?</p>
+                    </div>
+
+                    <div class="questions_text">
+                        <p class="question_text"><i class="fa-solid fa-caret-right"></i>Como é feito o orçamento?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Fontawesome -->
+
     <script src="https://kit.fontawesome.com/e55d507746.js" crossorigin="anonymous"></script>
 </body>
 </html>
