Criação da Section depoimentos e formulário

--- a/index.html
+++ b/index.html
@@ -342,6 +342,47 @@
                 </div>
             </div>
         </section>
+
+        <!-- Depoimentos -->
+        
+        <section class="comments">
+            <div class="comments_container">
+                <div class="comments_title">
+                    <h1>Depoimentos</h1>
+                </div>
+
+                <div class="comments_photo">
+                    <img src="assets/img/DEPOIMENTO.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Formulário mapa -->
+
+        <section class="form">
+            <div class="form_container">
+                <div class="form_title">
+                    <h1>Contato</h1>
+                </div>
+
+                <div class="form_map">
+                    <div class="form_body">
+                        <form action="" method="post">
+                                <input type="text" class="form1" placeholder="Nome"> 
+                                <input type="email" class="form1" placeholder="Email">
+                                <input type="tel" class="form1" placeholder="Telefone">
+                                <textarea name="" id="" cols="30" rows="5" class="form1" placeholder="Mensagem" style="resize: none"></textarea>
+                                <input type="submit" value="Enviar" class="form1" id="btn_form">
+                        </form>
+                    </div>
+
+                    <div class="map">
+                        <img src="assets/img/map.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Fontawesome -->
