Criação do footer

--- a/index.html
+++ b/index.html
@@ -385,7 +385,50 @@
 
     </main>
 
-    <!-- Fontawesome -->
+        <!-- Footer -->
+
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="footer_contato">
+                <h1>Contato</h1>
+                <p><i class="fa-solid fa-location-dot"></i>Campina Grande/PB</p>
+                <p><i class="fa-solid fa-envelope"></i>email@primecleanservice.info</p>
+                <p><i class="fa-brands fa-whatsapp"></i>(83) 98154-7744</p>
+                <p><i class="fa-solid fa-clock"></i>Segunda à Sábado das 8h às 18h</p>
+            </div>
+
+            <div class="footer_empresa">
+                <h1>Empresa</h1>
+                <p>Início</p>
+                <p>Sobre</p>
+                <p>Serviços</p>
+                <p>Contato</p>
+            </div>
+
+            <div class="footer_logos">
+                <div class="footer_links">
+                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+
+                <div class="prime">
+                    <img src="assets/img/prime.png" alt="">
+                </div>
+
+                <div class="upag">
+                    <img src="assets/img/up.png" alt="">
+                </div>
+
+            </div>
+        </div>
+
+        <div class="copy">
+            <p>Copyright © 2022 - Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+        <!-- Fontawesome -->
 
     <script src="https://kit.fontawesome.com/e55d507746.js" crossorigin="anonymous"></script>
 </body>
