--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Prime Clean Services</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <section>
         <div class="navbar">
             <div class="logo">
-                <img src="assets/img/logo.png" alt="">
+                <img src="public/assets/img/logo.png" alt="">
             </div>
 
             <nav class="menu">
@@ -45,17 +45,17 @@
 
         <section class="boxer_container">
             <div class="squad1">
-                <img src="assets/img/icon 01.png" alt="">
+                <img src="public/assets/img/icon01.png" alt="">
                 <h1>Qualidade</h1>
             </div>
 
             <div class="squad1">
-                <img src="assets/img/icon 02.png" alt="">
+                <img src="public/assets/img/icon02.png" alt="">
                 <h1>Higiene</h1>
             </div>
 
             <div class="squad1">
-                <img src="assets/img/icon 03.png" alt="">
+                <img src="public/assets/img/icon03.png" alt="">
                 <h1>Atendimento pontual</h1>
             </div>
 
@@ -71,7 +71,7 @@
             <div class="services_body">
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service1.png" alt="">
+                        <img src="public/assets/img/service1.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -83,7 +83,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service2.png" alt="">
+                        <img src="public/assets/img/service2.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -95,7 +95,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service3.png" alt="">
+                        <img src="public/assets/img/service3.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -107,7 +107,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service4.png" alt="">
+                        <img src="public/assets/img/service4.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -119,7 +119,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service5.png" alt="">
+                        <img src="public/assets/img/service5.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -131,7 +131,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service6.png" alt="">
+                        <img src="public/assets/img/service6.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -143,7 +143,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service7.png" alt="">
+                        <img src="public/assets/img/service7.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -155,7 +155,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service8.png" alt="">
+                        <img src="public/assets/img/service8.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -167,7 +167,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service9.png" alt="">
+                        <img src="public/assets/img/service9.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -179,7 +179,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service10.png" alt="">
+                        <img src="public/assets/img/service10.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -191,7 +191,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service11.png" alt="">
+                        <img src="public/assets/img/service11.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -203,7 +203,7 @@
 
                 <div class="services_box">
                     <div class="services_photo">
-                        <img src="assets/img/service12.png" alt="">
+                        <img src="public/assets/img/service12.png" alt="">
                     </div>
 
                     <div class="services_text">
@@ -247,7 +247,7 @@
                 </div>
 
                 <div class="about_photo">
-                    <img src="assets/img/about_photo.png" alt="">
+                    <img src="public/assets/img/about_photo.png" alt="">
                 </div>
             </div>
         </section>
@@ -257,19 +257,19 @@
         <section class="quest">
             <div class="quest_container">
                 <div class="quest_item">
-                    <img src="assets/img/icon 04.png" alt="">
+                    <img src="public/assets/img/icon04.png" alt="">
                     <h1>Missão</h1>
                     <p>Executar serviços de limpeza com excelência, trabalhando com eficiência e ética para atender as necessidades dos seus clientes.</p>
                 </div>
 
                 <div class="quest_item">
-                    <img src="assets/img/icon 04.png" alt="">
+                    <img src="public/assets/img/icon04.png" alt="">
                     <h1>Visão</h1>
                     <p>Tornar-se a empresa referência em serviços de limpeza.</p>
                 </div>
 
                 <div class="quest_item">
-                    <img src="assets/img/icon 04.png" alt="">
+                    <img src="public/assets/img/icon04.png" alt="">
                     <h1>Valores</h1>
                     <p>Respeito ao cliente, Prestatividade, pontualidade e otimização do tempo.</p>
                 </div>
@@ -285,7 +285,7 @@
                 </div>
 
                 <div class="results_photo">
-                    <img src="assets/img/instagram_photo.png" alt="">
+                    <img src="public/assets/img/instagram_photo.png" alt="">
                 </div>
             </div>
         </section>
@@ -300,12 +300,12 @@
 
                 <div class="photo_ambient">
                     <div class="photo_up">
-                        <img src="assets/img/Ambient01.png" alt="">
-                        <img src="assets/img/Ambient02.png" alt="">
+                        <img src="public/assets/img/Ambient01.png" alt="">
+                        <img src="public/assets/img/Ambient02.png" alt="">
                     </div>
 
                     <div class="photo_down">
-                        <img src="assets/img/ambient03.png" alt="">
+                        <img src="public/assets/img/ambient03.png" alt="">
                     </div>
                 </div>
             </div>
@@ -352,7 +352,7 @@
                 </div>
 
                 <div class="comments_photo">
-                    <img src="assets/img/DEPOIMENTO.png" alt="">
+                    <img src="public/assets/img/DEPOIMENTO.png" alt="">
                 </div>
             </div>
         </section>
@@ -377,7 +377,7 @@
                     </div>
 
                     <div class="map">
-                        <img src="assets/img/map.png" alt="">
+                        <img src="public/assets/img/map.png" alt="">
                     </div>
                 </div>
             </div>
@@ -413,11 +413,11 @@
                 </div>
 
                 <div class="prime">
-                    <img src="assets/img/prime.png" alt="">
+                    <img src="public/assets/img/prime.png" alt="">
                 </div>
 
                 <div class="upag">
-                    <img src="assets/img/up.png" alt="">
+                    <img src="public/assets/img/up.png" alt="">
                 </div>
 
             </div>
